# vectr-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
vectr_tools/csv_import_example/: main.py  models.py  sample.env  vectr_api_client.py  vectr_csv_export_reader.py
vectr_tools/csv_import_example/sample_data/: DEMO_PURPLE_CE.csv
